--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
 *.class
 *.log
+
+# sbt specific
+.cache
+.history
+.lib/
+dist/*
+target/
+codegen/
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
+
+# IntelliJ
+.idea/
